Add German translation, remove extraneous files, bugfixes, update copyrights, Save As option

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,7 +1,7 @@
 Code:
-Jeremy Wootten <jeremywootten@gmail.com>
-except minver - Yorba Foundation <yorba.org>
+Copyright Jeremy Wootten <jeremywootten@gmail.com>
+except minver - copyright Yorba Foundation <yorba.org>
 
 
 Puzzles:
-Fido/Frederico Vera <dtkcoding@gmail.com>
+Copyright Fido/Frederico Vera <dtkcoding@gmail.com>
