--- a/THANKS
+++ b/THANKS
@@ -1,8 +1,9 @@
 Translations:
-Hiroko Wootten - Japanese
+Japanese - Hiroko Wootten <hirokowootten@gmail.com>
+German   - chrysn <chrysn@fsfe.org>
 
 Testers:
-Hiroko Wootten
+Hiroko Wootten <hirokowootten@gmail.com>
 
 Projects:
 Gtk/GLib
