Add Spanish translation, synchronise gtk2, gtk3 and win32 versions to version 0.9.8

--- a/gnonograms-gtk2/THANKS
+++ b/gnonograms-gtk2/THANKS
@@ -1,6 +1,7 @@
 Translations:
 Japanese - Hiroko Wootten <hirokowootten@gmail.com>
 German   - chrysn <chrysn@fsfe.org>
+Spanish  - Federico Vera <dtkcoding@gmail.com>
 
 Testers:
 Hiroko Wootten <hirokowootten@gmail.com>
