--- a/gnonograms-gtk2/NEWS
+++ b/gnonograms-gtk2/NEWS
@@ -1,3 +1,18 @@
+Gnonograms version 0.9.8
+**************************
+08/Apr/2012  Added Spanish translation from Federico Vera <dtkcoding@gmail.com>
+             Corrected headers in translation files
+             Added "translator-credits" string to translation files and used this in the about dialog.
+             Check for solvability before trimming edges
+             Set puzzle name and source when importing from image
+             Increase logo size
+             Put all built-in games in solving state.
+             Load image immediately in constructor of image to gnonogram convertor
+             Bugfix: too large grid from image import
+             Bugfix: Ultimate solver return value on fail -> 0.
+             Bugfix: Set puzzle score to 999999 if fail to solve.
+             Bump version number to 0.9.8 to match gtk-3 version
+             Bugfix: Change state to SETTING after trimming blank edges.
 10/Mar/2012  Directory structure of source changed - gtk3 version created
 
 Gnonograms version 0.9.6
@@ -6,7 +21,7 @@ Gnonograms version 0.9.6
              Bug fix: Column label and column misalignment under some circumstances
              Changed Gnonogram config keys to remove spaces - for consistency with GConf
              Add translator credits and website to About dialog
-19/Feb/2012  Add German translation from chrysn <chrysn@fsfe.org>
+19/Feb/2012  Add German translation from Christian M. Amsüss <chrysn@fsfe.org>
              Remove extraneous files
              Review copyright notices
              Complete license field on built-in games
