--- a/gnonograms-gtk3/THANKS
+++ b/gnonograms-gtk3/THANKS
@@ -1,6 +1,7 @@
 Translations:
 Japanese - Hiroko Wootten <hirokowootten@gmail.com>
 German   - chrysn <chrysn@fsfe.org>
+Spanish  - Federico Vera <dtkcoding@gmail.com>
 
 Testers:
 Hiroko Wootten <hirokowootten@gmail.com>
