--- a/gnonograms-gtk3/po/ja_JP.po
+++ b/gnonograms-gtk3/po/ja_JP.po
@@ -1,18 +1,16 @@
-# po/gnonograms.pot
-# Translation template for Gnonograms game.
-# Copyright (C) 2010 J P Wootten
-# This file is distributed under the same license as the Gnonograms package.
-# JEREMY WOOTTEN <jeremywootten@gmail.com>, 2010.
-# Jeremy Wootten <jeremywootten@gmail.com>, 2011, 2012.
+# Japanese translation for Gnonograms3 game.
+# Copyright (C) 2012 Jeremy Wootten <jeremywootten@gmail.com> 
+# This file is distributed under the same license as the Gnonograms3 package.
+# Hiroko Wootten <hirokowootten@gmail.com>
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Gnonograms-0.1.0\n"
+"Project-Id-Version: gnonograms3 0.9.7\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2012-03-10 19:40+0000\n"
+"POT-Creation-Date: 2012-04-08 13:05+0100\n"
 "PO-Revision-Date: 2012-03-10 20:26+0000\n"
-"Last-Translator: Jeremy Wootten <jeremywootten@gmail.com>\n"
-"Language-Team: JAPANESE <jp@li.org>\n"
+"Last-Translator: Hiroko Wootten <hirokowootten@gmail.com>\n"
+"Language-Team: \n"
 "Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -477,6 +475,10 @@ msgstr "\"nonogram\"パズルを設計するし解決もする"
 msgid "About Gnonograms3"
 msgstr "Gnonograms3について"
 
+#: ../src/Gnonogram_viewer.vala:559
+msgid "translator-credits"
+msgstr "Hiroko Wootten <hirokowootten@gmail.com>"
+
 #: ../src/Gnonogram_viewer.vala:587
 msgid "Source:"
 msgstr "ソース:"
@@ -600,14 +602,6 @@ msgstr "横列"
 #: ../src/utils.vala:150
 msgid "Columns"
 msgstr "縦列"
-
-#: ../src/Resource.vala:173
-msgid ""
-"ja_JP\tHiroko Wootten <hirokowootten@gmail.com>\n"
-"de   \tchrysn <chrysn@fsfe.org>"
-msgstr ""
-"ja_JP\tウッテン浩子 <hirokowootten@gmail.com>\n"
-"de   \tchrysn <chrysn@fsfe.org>"
 
 #: ../src/Resource.vala:231 ../src/Resource.vala:243
 msgid "Color of filled cell when setting"
@@ -767,6 +761,13 @@ msgstr "論理ゲーム"
 #: additional_strings:1
 msgid "Gnonograms"
 msgstr "Gnonogramsパズル"
+
+#~ msgid ""
+#~ "ja_JP\tHiroko Wootten <hirokowootten@gmail.com>\n"
+#~ "de   \tchrysn <chrysn@fsfe.org>"
+#~ msgstr ""
+#~ "ja_JP\tウッテン浩子 <hirokowootten@gmail.com>\n"
+#~ "de   \tchrysn <chrysn@fsfe.org>"
 
 #~ msgid "Unable to get GConf value"
 #~ msgstr "GConfのから値を取得できません。"
