--- a/gnonograms-gtk3/NEWS
+++ b/gnonograms-gtk3/NEWS
@@ -1,3 +1,8 @@
+Gnonograms3 - version 0.9.10
+****************************
+04/June/2012 Bugfix: possible array bound error in solver (count_capped_ranges)
+             Reduced maximum size to 60 X 60;
+
 Gnonograms3 - version 0.9.9
 ***************************
 21/Apr/2012  Corrections/improvements to install and uninstall to ensure
