Implemented game editor -> version 0.3

--- a/gnonograms-java/NEWS
+++ b/gnonograms-java/NEWS
@@ -1,3 +1,8 @@
+Gnonograms-java - version 0.3
+*******************************
+June 10, 2012 Added information panel.
+              Added game editor (unvalidated clue input)
+
 Gnonograms-java - version 0.2
 *******************************
 June 09, 2012 Added save game function
