--- a/gnonograms-java/INSTALL
+++ b/gnonograms-java/INSTALL
@@ -1,4 +1,14 @@
 
   Gnonograms-java Installation (from gnonograms-java.jar)
-  ----------------------------------------------------------------------
+  -------------------------------------------------------
+  Requires OpenJDK Java >=6 Runtime or equivalent .
+
+  In the instructions below replace "x.x.x" by the version number of the program.
+
+  Mark the file Gnonograms-x.x.x.jar as executable if the OS requires it.
+
+  The program can then be run by right-clicking the .jar file and choosing "Open with OpenJDK Java 6 Runtime" or the equivalent command.
+
+  Alternatively open a terminal in the directory containing the .jar file and enter "java -jar ./Gnonograms-x.x.x.jar".
+
 
