--- a/gnonograms-java/NEWS
+++ b/gnonograms-java/NEWS
@@ -1,3 +1,7 @@
+Gnonograms-java - version 0.5
+*****************************
+June 24, 2012 Add persistent properties
+
 Gnonograms-java - version 0.4
 *****************************
 June 17, 2012 Tweak font and clue label sizing algorithms
