--- a/gnonograms-java/NEWS
+++ b/gnonograms-java/NEWS
@@ -1,3 +1,14 @@
+Gnonograms-java - version 0.6
+*****************************
+July 14, 2012 Replaced some (most) text with icons.
+              Code tidying
+              View tweaking
+July 15, 2012 Persistent Puzzle Directory property.
+              Bug fix: Info bar inappropriately cleared when game loaded
+              Revert to single toolbar
+              Starts off in solve mode with random puzzle
+July 28, 2012 Persistent starting mode - random puzzle, design puzzle or load puzzle.
+
 Gnonograms-java - version 0.5
 *****************************
 June 24, 2012 Add persistent properties
@@ -9,13 +20,7 @@ July 1, 2012  Add Timer
               Remember font size
               Restart solved game
 July 8, 2012  Context aware toolbars
-July 14, 2012 Replaced some text with icons.
-              Code tidying
-              View tweaking
-July15, 2012  Persistent Puzzle Directory property.
-              Bug fix: Info bar inappropriately cleared when game loaded
-              Revert to single toobar
-              Starts off in solve mode with random puzzle
+
 
 Gnonograms-java - version 0.4
 *****************************
