--- a/gnonograms-java/NEWS
+++ b/gnonograms-java/NEWS
@@ -8,6 +8,10 @@ July 15, 2012 Persistent Puzzle Directory property.
               Revert to single toolbar
               Starts off in solve mode with random puzzle
 July 28, 2012 Persistent starting mode - random puzzle, design puzzle or load puzzle.
+Aug  27, 2012 Improved solver algorithms
+              Highlight labels as well as current cell
+              Improved keyboard controls
+              Time taken shown in info bar instead of dialogue
 
 Gnonograms-java - version 0.5
 *****************************
