--- a/gnonograms-java/NEWS
+++ b/gnonograms-java/NEWS
@@ -1,3 +1,8 @@
+Gnonograms-java - version 0.9.0
+*******************************
+Sep 30, 2012  Version 0.9.0
+              ImageImporter implemented
+
 Gnonograms-java - version 0.8.0
 *******************************
 Sep 09, 2012  Version 0.8.0
