--- a/gnonograms-java/NEWS
+++ b/gnonograms-java/NEWS
@@ -2,6 +2,8 @@ Gnonograms-java - version 0.9.0
 *******************************
 Sep 30, 2012  Version 0.9.0
               ImageImporter implemented
+              Lock aspect ratio feature in Image importer
+              Draft New icons in image importer
 
 Gnonograms-java - version 0.8.0
 *******************************
