--- a/gnonograms-java/NEWS
+++ b/gnonograms-java/NEWS
@@ -1,3 +1,8 @@
+Gnonograms-java - version 0.9.1
+*******************************
+Oct 20, 2012  Internationalistion infrastructure added
+Nov 03, 2012  Partial translation into Japanese and German
+
 Gnonograms-java - version 0.9.0
 *******************************
 Sep 30, 2012  Version 0.9.0
